fix: disable scrolling on collapsed cards

--- a/app/style.css
+++ b/app/style.css
@@ -206,6 +206,10 @@ button.ghost {
   padding-right: 2px;
 }
 
+.card.is-collapsed .card-body {
+  overflow: hidden;
+}
+
 .card-id {
   position: absolute;
   top: 8px;
